--- a/_config.yml
+++ b/_config.yml
@@ -7,13 +7,13 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Your Name / Site Title"
+title                    : "Burhan Ahmad Mudassar"
 title_separator          : "-"
-name                     : &name "Your Name"
+name                     : &name "Burhan Ahmad Mudassar"
 description              : &description "personal description"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://burhanmudassar.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages.github.io"
+repository               : "burhanmudassar/burhanmudassar.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
@@ -79,13 +79,13 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Sidebar Name"
+  name             : "Burhan Ahmad Mudassar"
   avatar           : "profile.png"
   bio              : "Your biography for the left-hand sidebar"
-  location         : "Location"
-  employer         :
+  location         : "1002 State St. NW, Apt 3, Atlanta GA 30318"
+  employer         : "Georgia Tech"
   googlescholar    : "http://yourfullgooglescholarurl.com"
-  email            :
+  email            : "burhanahmadmudassar@gmail.com"
   uri              :
   bitbucket        :
   codepen          :
@@ -93,12 +93,12 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "academicpages"
+  github           : "burhanmudassar"
   google_plus      :
   keybase          :
   instagram        :
   lastfm           :
-  linkedin         :
+  linkedin         : "https://www.linkedin.com/in/burhan-ahmad-mudassar-88258a51/"
   orcid            : "http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
