--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 # Site Author
 author:
   name             : "Burhan Ahmad Mudassar"
-  avatar           : "profile.png"
+  avatar           : "bio.jpg"
   bio              : "Ph.D Student in Green Lab at Georgia Tech"
   location         : "Atlanta, GA"
   employer         : 
