--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 # Site Author
 author:
   name             : "Asif Rana"
-  avatar           : "bio_crop.png"
+  avatar           : "asif.png"
   bio              : "Ph.D Student in ECE at Georgia Tech"
   location         : "Atlanta, GA"
   employer         : 
